add the ability to change the order of columns